[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradepilot"
version = "0.1.0"
description = "Professional desktop trading platform for Zerodha Kite"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Vivek Aalok" }
]

dependencies = [
    "PySide6>=6.8.0",
    "kiteconnect>=5.0.1",
    "loguru>=0.7.2",
    "PyYAML>=6.0.2",
    "pyqtgraph>=0.13.7",
    "requests>=2.32.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
